# quotes-api

./: .gitignore  Dockerfile  aerich.ini  pyproject.toml  start.sh
app/: __init__.py  config.py  dependencies.py  models.py  utils.py
app/internal/: users.py
app/routers/: images.py  index.py  quotes.py  users.py
migrations/models/: 0_20211003152314_init.sql  1_20211003152605_add avatar field to users.sql
